<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/heading"
        android:textColor="@color/purple_700"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/inPoly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="textPersonName" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/requestLabel"
        android:onClick="simpleRequestClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="jsonRequestClick"
        android:text="@string/jsonLabel" />


</LinearLayout>